--- a/WebApi/Views/Home/Index.cshtml
+++ b/WebApi/Views/Home/Index.cshtml
@@ -1,8 +1,19 @@
 ﻿
-@{
-    ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
-
-<h2>Index</h2>
-
+<div class="container">
+    <div class="jumbotron">
+        <div class="panel-body" ng-controller="productsController">
+            <div class="media" ng-repeat="product in allProducts">
+                @*<a class="pull-left" href="#">
+                    <img class="media-object" ng-src="{{product.image}}" />
+                </a>*@
+                <input type="hidden" value="{{product.ProductID}}" />
+                <div class="media-body">
+                    <h3 class="media-heading">
+                        {{product.Name}}
+                    </h3>
+                    <p>{{product.Description}}</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
