--- a/WebApi/Views/Shared/_Layout.cshtml
+++ b/WebApi/Views/Shared/_Layout.cshtml
@@ -4,16 +4,16 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
-    @Styles.Render("~/bootstrap/css")
+    @Styles.Render("~/bootstrap")
 </head>
 <body>
-    <div>
+    <div ng-app="app">
         @RenderBody()
     </div>
 
-    @Scripts.Render("~/jquery/js")
-    @Scripts.Render("~/bootstrap/js")
-    @Scripts.Render("~/angular/js")
+    @Scripts.Render("~/jquery")
+    @Scripts.Render("~/angularJs")
+    @Scripts.Render("~/angularJs-products")
 
    
 
